storage/02-minio.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: storage
  name: minio
spec:
  selector:
    matchLabels:
      app: minio
  serviceName: minio
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio
        args:
          - server
          - --console-address
          - ':9090'
          - --quiet
          - /data
        ports:
        - containerPort: 9000
          name: api
        - containerPort: 9090
          name: console
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  namespace: storage
  name: minio
spec:
  selector:
    app: minio
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
    name: api
  - protocol: TCP
    port: 9090
    targetPort: 9090
    name: console
