storage/mysql.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: storage
  labels:
    name: storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: storage
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
        resources:
          requests:
            memory: 1024Mi
            cpu: 60m
          limits:
            cpu: 500m
            memory: 1024Mi
      volumes:
      - name: mysql
        persistentVolumeClaim:
          claimName: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: storage
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
