storage/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: storage
  name: storage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: minio.lvh.me
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9090
